-- The name of the package.
name:                domainnames

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.1.1

-- A short (one-line) description of the package.
synopsis:            domain names data types

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:           Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:        >=1.10


library
  ghc-options:        -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:    DomainNames.Constants
                    , DomainNames.Domain
                    , DomainNames.Error.ExecCreateDomainError
                    , DomainNames.Error.DomainError
                    , DomainNames.Error.DomainLabelError
                    , DomainNames.Error.FQDNError
                    , DomainNames.Error.HostnameError
                    , DomainNames.FQDN                  , DomainNames.T.FQDN
                    , DomainNames.Hostname              , DomainNames.T.Hostname
                    , DomainNames.Error.LocalnameError
                    , DomainNames.UQDN
                    , DomainNames.Error.UQDNError

  -- modules included in this library but not exported.
  other-modules:

  default-extensions: DeriveAnyClass
                    , DeriveGeneric
                    , FlexibleContexts
                    , LambdaCase
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternSynonyms
                    , QuasiQuotes
                    , RankNTypes
                    , TemplateHaskell
                    , UnicodeSyntax
                    , ViewPatterns

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:      aeson, base, base-unicode-symbols, containers
                    , data-default, data-textual, deepseq, dhall >= 1.30.0
                    , hashable, lens, mtl, tasty , tasty-hunit
                    , template-haskell, text , text-printer, yaml

                    , has-callstack        >= 1.0.1.0
                    , ip4                  >= 0.0.0.1
                    , more-unicode         >= 0.0.16.0
                    , non-empty-containers >= 1.4.2.0
                    , proclib              >= 3.2.3.2
                    , quasiquoting         >= 1.0.0.0
                    , tasty-plus           >= 1.5.1.0
                    , tfmt                 >= 0.2.4.0

  -- Directories containing source files.
  hs-source-dirs:     src

  -- Base language which the package is written in.
  default-language:   Haskell2010


----------------------------------------

test-suite domainnames-tests
  ghc-options:      -O2 -W -Wall -fhelpful-errors
  type:             exitcode-stdio-1.0
  hs-source-dirs:   t
  main-is:          domainnames.hs
  build-depends:    base, base-unicode-symbols, optparse-applicative, tasty

                  , domainnames, more-unicode, tasty-plus

  default-language: Haskell2010

-------------------------------------------------------------------------------
